[tool.poetry]
name = "starkstream-cairo"
version = "0.1.0"
description = ""
authors = ["chen <23054115+cwkang1998@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
cairo-lang = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
